Upgrade to Java 11
https://github.com/guardian/flexible-content/pull/4392/files/47b4f2d0fa866948794f8ea64af9a72410d01847..eee9afec3b41e86a1eedf437633d10c656d5f1da#r1317092876